; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/regulator/extr_da903x.c_da9034_get_ldo12_voltage.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/regulator/extr_da903x.c_da9034_get_ldo12_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { i32 }
%struct.da903x_regulator_info = type { i32, i32, i32, i32, i32 }
%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*)* @da9034_get_ldo12_voltage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @da9034_get_ldo12_voltage(%struct.regulator_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.regulator_dev*, align 8
  %4 = alloca %struct.da903x_regulator_info*, align 8
  %5 = alloca %struct.device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.regulator_dev* %0, %struct.regulator_dev** %3, align 8
  %9 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %10 = call %struct.da903x_regulator_info* @rdev_get_drvdata(%struct.regulator_dev* %9)
  store %struct.da903x_regulator_info* %10, %struct.da903x_regulator_info** %4, align 8
  %11 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %12 = call %struct.device* @to_da903x_dev(%struct.regulator_dev* %11)
  store %struct.device* %12, %struct.device** %5, align 8
  %13 = load %struct.device*, %struct.device** %5, align 8
  %14 = load %struct.da903x_regulator_info*, %struct.da903x_regulator_info** %4, align 8
  %15 = getelementptr inbounds %struct.da903x_regulator_info, %struct.da903x_regulator_info* %14, i32 0, i32 4
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @da903x_read(%struct.device* %13, i32 %16, i32* %6)
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* %8, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %1
  %21 = load i32, i32* %8, align 4
  store i32 %21, i32* %2, align 4
  br label %59

22:                                               ; preds = %1
  %23 = load %struct.da903x_regulator_info*, %struct.da903x_regulator_info** %4, align 8
  %24 = getelementptr inbounds %struct.da903x_regulator_info, %struct.da903x_regulator_info* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = shl i32 1, %25
  %27 = sub nsw i32 %26, 1
  %28 = load %struct.da903x_regulator_info*, %struct.da903x_regulator_info** %4, align 8
  %29 = getelementptr inbounds %struct.da903x_regulator_info, %struct.da903x_regulator_info* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = shl i32 %27, %30
  store i32 %31, i32* %7, align 4
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* %7, align 4
  %34 = and i32 %32, %33
  %35 = load %struct.da903x_regulator_info*, %struct.da903x_regulator_info** %4, align 8
  %36 = getelementptr inbounds %struct.da903x_regulator_info, %struct.da903x_regulator_info* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = ashr i32 %34, %37
  store i32 %38, i32* %6, align 4
  %39 = load i32, i32* %6, align 4
  %40 = icmp sge i32 %39, 8
  br i1 %40, label %41, label %49

41:                                               ; preds = %22
  %42 = load %struct.da903x_regulator_info*, %struct.da903x_regulator_info** %4, align 8
  %43 = getelementptr inbounds %struct.da903x_regulator_info, %struct.da903x_regulator_info* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 4
  %45 = load i32, i32* %6, align 4
  %46 = sub nsw i32 %45, 8
  %47 = mul nsw i32 %44, %46
  %48 = add nsw i32 2700000, %47
  store i32 %48, i32* %2, align 4
  br label %59

49:                                               ; preds = %22
  %50 = load %struct.da903x_regulator_info*, %struct.da903x_regulator_info** %4, align 8
  %51 = getelementptr inbounds %struct.da903x_regulator_info, %struct.da903x_regulator_info* %50, i32 0, i32 3
  %52 = load i32, i32* %51, align 4
  %53 = load %struct.da903x_regulator_info*, %struct.da903x_regulator_info** %4, align 8
  %54 = getelementptr inbounds %struct.da903x_regulator_info, %struct.da903x_regulator_info* %53, i32 0, i32 2
  %55 = load i32, i32* %54, align 4
  %56 = load i32, i32* %6, align 4
  %57 = mul nsw i32 %55, %56
  %58 = add nsw i32 %52, %57
  store i32 %58, i32* %2, align 4
  br label %59

59:                                               ; preds = %49, %41, %20
  %60 = load i32, i32* %2, align 4
  ret i32 %60
}

declare dso_local %struct.da903x_regulator_info* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local %struct.device* @to_da903x_dev(%struct.regulator_dev*) #1

declare dso_local i32 @da903x_read(%struct.device*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
